tests/ui/consts/static_mut_containing_mut_ref2.mut_refs.stderr
warning: creating a mutable reference to mutable static is discouraged
  --> $DIR/static_mut_containing_mut_ref2.rs:8:6
   |
LL |     *(&mut STDERR_BUFFER_SPACE) = 42;
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: for more information, see issue #114447 <https://github.com/rust-lang/rust/issues/114447>
   = note: this will be a hard error in the 2024 edition
   = note: this mutable reference has lifetime `'static`, but if the static gets accessed (read or written) by any other means, or any other reference is created, then any further use of this mutable reference is Undefined Behavior
   = note: `#[warn(static_mut_refs)]` on by default
help: use `addr_of_mut!` instead to create a raw pointer
   |
LL |     *addr_of_mut!(STDERR_BUFFER_SPACE) = 42;
   |      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0080]: could not evaluate static initializer
  --> $DIR/static_mut_containing_mut_ref2.rs:8:5
   |
LL |     *(&mut STDERR_BUFFER_SPACE) = 42;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ modifying a static's initial value from another static's initializer

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
